Makes build event files adopting the new `InstrumentationOutput` framework
PiperOrigin-RevId: 695325332
Change-Id: Ib919a4bfe455c08aa8104f3a9326754851b1c156